# dokploy-wizard

./: .dockerignore  .gitignore  .install-my-farm-advisor-min.env.example  .install.env.example  AGENTS.md  README.md  pyproject.toml
.sisyphus/plans/: dokploy-env-secrets.md
docker/nexa-mem0/: Dockerfile
docker/nexa-runtime/: Dockerfile
docs/incidents/: openclaw-trusted-proxy-scopes.md
fixtures/: cloudflare-valid.env  cloudflare-wrong-zone.env  core-low-resource.env  core.env  destroy.confirm  full.env  headscale.env  invalid-pack-combo.env  lifecycle-headscale.env  matrix.env  modify-domain.env  modify-unsupported.env  moodle-docuseal.env  nexa-onlyoffice-callback-status-2.json  nexa-onlyoffice-callback-status-6.json  nexa-talk-webhook-room-message.json  nextcloud.env  openclaw-invalid.env  openclaw-matrix.env  openclaw-telegram.env  retain.confirm  unsupported-host.env
fixtures/corrupt-ledger/: ownership-ledger.json
src/dokploy_wizard/: __init__.py  __main__.py  bootstrap.py  cli.py  fresh_vps_validation_harness.py  host_prereqs.py  preflight.py  remote.py  remote_transport.py  service_verification_runner.py
templates/packs/: my-farm-advisor.compose.yaml  openclaw.compose.yaml
tests/: __init__.py  nexa_mem0_test_server.py  nexa_nextcloud_test_server.py  test_agents_docs.py  test_cli.py  test_remote_cli.py  test_remote_transport.py  test_service_verification_runner.py
tests/e2e/: test_destroy_confirmation.py  test_fresh_vps_contract.py  test_fresh_vps_validation_harness.py  test_rerun_modify_resume.py
tests/helpers/: root_install_env.py
(+180 files in other folders)
